pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-malformed-instance.ub
factory: {
  state-moves: [
    { from: 'core.thing@resource.items[old]', to: 'core.thing@resource.items.new' }
  ]
}
